<resources>
    <string name="app_name">BarncoDemoApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_news">News</string>
    <string name="menu_Info">Info-In-Graphics</string>
    <string name="menu_namo">Namo </string>
    <string name="menu_network">My Network</string>
    <string name="menu_volunteer">Volunteer</string>
    <string name="menu_govt">Govt in Action</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_read">Read it Later</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Help and Feedback</string>
    <string name="menu_qr">QR Scanner</string>
    <string name="share">Share your memories with PM Modi!</string>
    <string name="prime_minister">Prime Minister Narendra Modi will share  Mann ki Baat on sunday  October 27th. If you have innovative ideas and suggetions here is an opprtunuity to directly share it with the PM. Some of the suggetions would be reffered by the Prime Minister during his address.</string>

    <string name="pm">PM Modi, Xi Jinping look to refresh India-China ties at Seaside summit today</string>





    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>

</resources>
