<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />


        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_news" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Info" />

        <item
            android:id="@+id/nav_namo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_namo" />

        <item
            android:id="@+id/nav_volunteer"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_volunteer" />

        <item
            android:id="@+id/nav_govt"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_govt" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_read"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_read" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_qr" />











        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
