<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <!--<androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/lightGreen"
        android:layout_width="match_parent"
        android:layout_height="60dp">


        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            app:cardBackgroundColor="#666600"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/ic_language_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:text="Survey"
                    android:textColor="@color/whiteColor"
                    android:textSize="12dp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#666600"
            android:layout_gravity="center">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:background="@drawable/ic_tv_black_24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"/>

                <TextView
                    android:text="NaMo TV"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="12dp"
                    android:textColor="@color/whiteColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="25dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#666600"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center">

            <TextView
                android:text="Marchandise"
                android:textSize="12dp"
                android:layout_gravity="center"
                android:textColor="@color/whiteColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="25dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#666600"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center">

            <TextView
                android:text="ToDo Task"
                android:textSize="12dp"
                android:layout_gravity="center"
                android:textColor="@color/whiteColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

  <!--  <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

-->
    <ScrollView
        android:layout_marginTop="65dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="@color/whiteColor"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:background="@drawable/mod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/share"
            android:layout_margin="10dp"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:textColor="@color/black_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="@color/whiteColor"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/pm"
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:gravity="center"
                android:textColor="@color/black_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </TextView>

            <ImageView
                android:background="@drawable/namm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/prime_minister"
                android:layout_margin="10dp"
                android:textSize="14dp"
                android:layout_gravity="center"
                android:textColor="@color/black_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_favorite"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="196"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <ImageView
                    android:src="@drawable/ic_comment_black_24dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="75"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:src="@drawable/ic_share_black_24dpp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="49"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="@color/whiteColor"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/pm"
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:gravity="center"
                android:textColor="@color/black_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </TextView>

            <ImageView
                android:background="@drawable/modiii"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/share"
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:layout_gravity="center"
                android:textColor="@color/black_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>



    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/whiteColor"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp">



        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_home"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/menu_home"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_message_black"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/menu_news"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_notifications_none"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/menu_namo"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_home"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/menu_namo"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>





    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>